# remux

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
public/: coi-serviceworker.js
src/: App.tsx  index.css
src/components/: AbrPanel.tsx  ActivityPanel.tsx  Header.tsx  OutputPanel.tsx  Player.tsx  ProgressPanel.tsx  RawPreview.tsx  ResumeBanner.tsx  SourcePanel.tsx  SubtitleCueEditor.tsx  Timeline.tsx  TransportControls.tsx  ValuePropBanner.tsx  Waveform.tsx
src/hooks/: usePersistence.ts  useTranscoder.ts
src/lib/: mediaPreview.ts  vtt.ts  zip.ts
src/types/: index.ts  opfs.d.ts
src/worker/: remux.worker.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
