[package]
name = "remux-core"
version = "0.1.0"
edition = "2021"
description = "MP4 header parser and MPEG-TS muxer, compiled to WebAssembly, powering the Remux browser app"
repository = "https://github.com/pzanella/remux"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
